--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alabaster==0.7.10
+altgraph==0.15
 astroid==1.5.3
+autopep8==1.3.4
 Babel==2.5.0
 beautifulsoup4==4.6.0
 bleach==1.5.0
@@ -11,8 +13,10 @@ colorama==0.3.9
 cycler==0.10.0
 decorator==4.1.2
 Django==2.0.2
+django-haystack==2.8.0
 docutils==0.14
 entrypoints==0.2.3
+future==0.16.0
 html5lib==0.9999999
 imagesize==0.7.1
 ipykernel==4.6.1
@@ -20,11 +24,13 @@ ipython==6.1.0
 ipython-genutils==0.2.0
 isort==4.2.15
 jedi==0.10.2
+jieba==0.39
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter-client==5.1.0
 jupyter-core==4.3.0
 lazy-object-proxy==1.3.1
+macholib==1.9
 Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.1.1
@@ -35,6 +41,8 @@ numpy==1.13.3
 numpydoc==0.7.0
 pandocfilters==1.4.2
 path.py==10.3.1
+pefile==2017.11.5
+pep8==1.7.1
 pickleshare==0.7.4
 Pillow==5.0.0
 prompt-toolkit==1.0.15
@@ -43,10 +51,13 @@ psycopg2==2.7.4
 pycodestyle==2.3.1
 pyflakes==1.6.0
 Pygments==2.2.0
+PyInstaller==3.3.1
 pylint==1.7.2
 pyparsing==2.2.0
+pypiwin32==223
 python-dateutil==2.6.1
 pytz==2018.3
+pywin32==223
 pyzmq==16.0.2
 QtAwesome==0.4.4
 qtconsole==4.3.1
@@ -64,5 +75,6 @@ testpath==0.3
 tornado==4.5.2
 traitlets==4.3.2
 wcwidth==0.1.7
+Whoosh==2.7.4
 wincertstore==0.2
 wrapt==1.10.11
